# synxit-server

./: .gitignore  Cargo.toml  flake.nix
src/: config.rs  main.rs
src/erorr/: mod.rs
src/logger/: error.rs  mod.rs
src/storage/: mod.rs
src/storage/file/: mod.rs
src/synxit/: config.rs  mod.rs  security.rs
src/synxit/config/: mod.rs
src/synxit/user/: blob.rs  mod.rs  sessions.rs
src/tests/: common.rs  mod.rs
src/user/: mod.rs  sessions.rs
src/utils/: mod.rs
src/web/: auth.rs  blob.rs  federation.rs  keyring.rs  mod.rs  registration.rs
src/web/auth/: auth.rs  auth_mfa.rs  encrypted_data.rs  foreign_key.rs  foreign_keyring.rs  is_auth.rs  logout.rs  mod.rs  prepare.rs
