[package]
name = "synxit-server"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "This is the synxit server software, a full encrypted decentralized network for almost everything."
authors = ["Lennis Jaumann <x@lennis.dev>"]
repository = "https://github.com/synxit/synxit-server"
homepage = "https://www.synxit.de"
[dependencies]
actix-web = "4"
chrono = "0.4.38"
ftail = "0.2.1"
log = "0.4.26"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha256 = "1.5.0"
toml = "0.8.19"
totp-rs = { version = "5.6.0", features = ["gen_secret"] }
