[package]
publish = false
name = "synxit-server"
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "This is the synxit server software, a full encrypted decentralized network for almost everything."
authors = ["Lennis Jaumann <x@lennis.dev>"]
repository = "https://github.com/synxit/synxit-server"
homepage = "https://www.synxit.de"

[dependencies]
actix-web = "4"
base64 = "0.22.1"
chrono = "0.4.38"
colored = "3.0.0"
fs4 = "0.13.1"
log = { version = "0.4.26", features = ["std", "serde"] }
rand = "0.8.5"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha256 = "1.5.0"
toml = "0.8.19"
totp-rs = { version = "5.6.0", features = ["gen_secret"] }
